# freddy_pmu_control

./: CMakeLists.txt  README.md
freddy_power_control/: pmu_control.c
